k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: containerize-webapp
  lables:
    app: containerize_webapp
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: containerize_webapp
  type: ClusterIP
