k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: containerize-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: containerize-webapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: containerize-webapp
                port:
                  number: 80
